apps/warpgate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warpgate-svc-cip
  namespace: warpgate
spec:
  selector:
    app: warpgate
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: warpgate-svc-lb
  namespace: warpgate
spec:
  selector:
    app: warpgate
  ports:
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: ssh
  type: LoadBalancer
