apps/warpgate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: cloudflare-issuer
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.middlewares: infrastructure-redirect-https@kubernetescrd
    name: warpgate-ingress
    namespace: warpgate
spec:
    rules:
        - host: ENC[AES256_GCM,data:Q5rkFmgUt+skjr7FU1lGtUIM8nnYPs+VYGvu+Q==,iv:kaVtdZSj2bTJPkDa0YDj30JNKxL/fApMmunrvFya22M=,tag:CG1G6dodlH6Al9uLYM5StQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: warpgate-svc-cip
                        port:
                            number: 8888
    tls:
        - hosts:
            - ENC[AES256_GCM,data:eZqdiZGtHHytL4DhzucxMDDhehFwZM6qA3kdHg==,iv:GR9nG9KPCHavkCeA44kFj99DltpHm5PTDGLBdIdPXJw=,tag:nTHh+p4pthK3fEDEWwhBHg==,type:str]
          secretName: warpgate-cert
sops:
    lastmodified: "2026-06-04T15:20:59Z"
    mac: ENC[AES256_GCM,data:03Zn5tth2lwpvPVxjgsFRMREwv0+7kUpiZktg/HQUpljQLwLNWo9GRqmUISytFGEMhKwVDduhfW9zRVhezyv68u2RjdAj5Tm0PkBRR2emDjQ/QGDTiaNf5XhlWK4cICuOqoPtfwTbPe+0WHM42HBQoipPXdeqbmPq4N6yFT8eZg=,iv:QoS+q1v/pE4zyAV2WNyAdoc5ZJwL8e5DEdcvNUCedRw=,tag:8AnAZimhCwgp2wqGx9QOKg==,type:str]
    pgp:
        - created_at: "2026-06-04T15:20:59Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA1R72LzcpgpmAQ//dvkgEKEfrsGdQcy7HIdq12Q7gDRBJY8pYFnVBXYc+Cqs
[...]
            =jJnp
            -----END PGP MESSAGE-----
          fp: 08083A92DBB719D2E10998259B44720A645D6802
    encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
    version: 3.12.2
